--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -44,6 +44,30 @@
   display: flex;
   flex-direction: column;
   margin-left: 10rpx;
+  align-items: flex-start;
+}
+.actions-title-container{
+  padding: 0!important
+}
+.song-card-container{
+  padding-top: 30rpx;
+  padding-bottom: 30rpx;
+  border-bottom: 1px solid #eee;
+  padding-left: 34rpx;
+  color: #777;
+}
+.action-item{
+  padding-top: 20rpx;
+  padding-bottom: 20rpx;
+}
+.action-icon{
+  margin-right: 25rpx;
+  position: relative; 
+}
+
+.song-list-add-new{
+  margin-bottom: 15rpx;
+  padding: 0 15rpx;
 }
 
 .nav-icon-row-container {
