--- a/subpackages-search/pages/batch-action-page/batch-action-page.wxml
+++ b/subpackages-search/pages/batch-action-page/batch-action-page.wxml
@@ -1,11 +1,11 @@
 <wxs src="../../../common/utils/func/tools.wxs" module="tools"/>
-<wrapper nav-bar-class="theme-module-color" bindgetcontentheight="getContentHeight" catchtapaddnextsong="tapAddNextSong" catchtapaddtosonglist="tapAddToSongList" catchtapdownload="tapDownload" mode="batch">
+<wrapper nav-bar-class="theme-module-color" bindgetcontentheight="getContentHeight" catchtapaddnextsong="tapAddNextSong" catchtapaddtosonglist="tapAddToSongList" catchtapdownload="tapDownload" mode="batchMusicItem">
   <view slot="nav-bar-left" class="back-icon">
     <back-button />
   </view>
-  <view slot="nav-bar-middle">
+  <!-- <view slot="nav-bar-middle">
     
-  </view>
+  </view> -->
   <text slot="nav-bar-right" class="all-select" catchtap="allChecked">{{checkedIds.length==singDatas.length?'取消全选':'全选'}}</text>
   <!--滚动内容区-->
   <scroll-view scroll-y slot="content" class="theme-module-color theme-padding" style="height:100%">
