--- a/common/components/my-radio/my-radio.wxml
+++ b/common/components/my-radio/my-radio.wxml
@@ -1,3 +1,3 @@
-<view class="my-radio {{checked?'checked':'not-check'}}" style="width:{{size*1.3}}px;height:{{size*1.3}}px;border-radius:{{size*1.3}}px" catchtap="change">
+<view class="my-radio {{checked?'checked':'not-check'}}" style="width:{{size*1.3}}px;height:{{size*1.3}}px;border-radius:{{size*1.3}}px" bindtap="change">
   <i-icon type="right" hidden="{{!checked}}" size="{{size}}" color="#fff"/>
 </view>
