--- a/common/components/wrapper/wrapper.wxss
+++ b/common/components/wrapper/wrapper.wxss
@@ -19,7 +19,7 @@
   justify-content: space-between;
   border-top: 1px solid #eee;
 }
-.batch-list-action-bar-container{
+.batch-list-action-bar-container,.edit-action-bar-container{
   display: flex;
   padding:10rpx var(--theme-gap);
   background-color: var(--theme-module-color);
@@ -34,7 +34,7 @@
   width: 33%;
 }
 .action-item-text{
-  color: #777;
+  color: #333;
   font-size: 28rpx;
   margin-top: 14rpx;
 }
