--- a/pages/sub-pages/profile-detail/profile-detail.wxml
+++ b/pages/sub-pages/profile-detail/profile-detail.wxml
@@ -1,30 +1,34 @@
 <wrapper nav-bar-class="nav-bar-container {{topBarchange?'theme-module-color':'theme-color'}}">
   <view slot="nav-bar-left" class="back-icon nav-bar-left flex-row">
-    <back-button color="#fff"/>
+    <back-button color="#fff" />
     <text class="{{topBarchange?'show-name':'not-show-name'}} one-row-flow person-name-opacity">茯苓</text>
   </view>
   <view slot="nav-bar-right">
-    <i-icon type="switch" size="33" color="#fff"/>
+    <i-icon type="switch" size="33" color="#fff" catchtap="tapSwitch" />
   </view>
   <scroll-view scroll-y slot="content" style="height:100%" class="theme-bg element-distance" bindscroll="scrolling" upper-threshold="8" scroll-with-animation bindscrolltoupper="scrolltoupper">
     <view class="theme-color person-bg-view element-distance"></view>
     <!--头像昵称-->
     <view class="avator-name-container theme-margin flex-col">
       <view class="person-avator">
-        <circular-item src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" size="180" />
+        <circular-item src="{{userInfo.avator}}" size="180" />
       </view>
-      <text class="person-name one-row-flow">茯苓</text>
+      <i-icon type="editor" color="#666" size="20" catchtap="tapEditor" class="editor-icon"/>
+      <text class="person-name one-row-flow">{{userInfo.userName}}</text>
     </view>
     <!--音乐风格标签-->
     <view class="style-label">
       <profile-detail-card title="音乐风格标签">
-        <view class="style-label-items flex-row">
-          <view wx:for="{{[1,2,3,4,5,6,7]}}" class="style-label-item">慢歌</view>
+        <!-- <view class="style-label-items flex-row">
+          <view wx:for="{{userInfo.choosedStyles}}" class="style-label-item">{{item}}</view>
+        </view> -->
+        <view class="flex-row" style="align-items: center;">
+          <info-label isActive="true" wx:for="{{userInfo.choosedStyles}}" value="{{item}}" wx:key="index" />
         </view>
       </profile-detail-card>
     </view>
     <!--乐库-->
-    <view class="music-module">
+    <!-- <view class="music-module">
       <profile-detail-card title="乐库">
         <view class="music-card-container flex-col">
           <view class="song-list-item">
@@ -35,9 +39,9 @@
           </view>
         </view>
       </profile-detail-card>
-    </view>
+    </view> -->
     <!--歌单-->
-    <view class="song-list-module">
+    <!-- <view class="song-list-module">
       <profile-detail-card title="歌单">
         <view class="song-list-card-container flex-col">
           <view class="song-list-item">
@@ -48,9 +52,9 @@
           </view>
         </view>
       </profile-detail-card>
-    </view>
+    </view> -->
     <!--评论-->
-    <view class="comment--module">
+    <!-- <view class="comment--module">
       <profile-detail-card title="评论">
         <view class="comment-container flex-col">
           <view class="song-list-item">
@@ -58,6 +62,27 @@
           </view>
         </view>
       </profile-detail-card>
-    </view>
+    </view> -->
   </scroll-view>
 </wrapper>
+
+<!-- 开关触发底部操作功能弹框 -->
+<bottom-modal isShow="{{showActionModal}}" bindbgtap="hideModal" title-container-class="actions-title-container">
+  <view slot="title" class="flex-column theme-padding title-container" style="width:100%">
+    操作
+  </view>
+  <view slot="content" class="theme-module-color theme-padding">
+    <view class="action-item" wx:for="{{actions}}" wx:key="id" catchtap="tapAction" data-index="{{index}}">
+      <three-column-bar>
+        <view wx:if="{{item.icon!='share'}}" slot="middle" class="flex-row action-container">
+          <i-icon type="{{item.icon}}" color="#666" size="24" class="action-icon" />
+          <text>{{item.text}}</text>
+        </view>
+        <button open-type="share" plain class="share-button flex-row action-container" slot="middle" wx:if="{{item.icon=='share'}}">
+          <i-icon type="{{item.icon}}" color="#666" size="24" class="action-icon" />
+          <text>{{item.text}}</text>
+        </button>
+      </three-column-bar>
+    </view>
+  </view>
+</bottom-modal>
