--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -4,9 +4,9 @@
   </view>
   <view slot="nav-bar-middle" class="show-top-info-container flex-row {{topBarchange?'show-thumb-avator':'not-show-thumb-avator'}}">
     <view class="show-top-image">
-      <circular-item src="{{userAvatar}}" size="60" />
+      <circular-item src="{{userInfo.avator}}" size="60" />
     </view>
-    <text class="one-row-flow">{{userId}}</text>
+    <text class="one-row-flow">{{userInfo.userName}}</text>
   </view>
   <!--隐形歌单导航条-->
 <tab-bar tab-bar-class="fixed-song-list-nav-bar song-list-cp-nav-container theme-padding" bindclicktabitem="clickTabItem" currentTabId="{{currentSongListId}}" tabTitles="{{songListNav}}" wx:if="{{navBarIsTop}}" slot="other"/>
@@ -17,10 +17,10 @@
     <view class="theme-padding" class="user-info-container theme-padding"  catchtap="goToProfileDetail">
       <three-column-bar>
         <view slot="left" class="avator-icon">
-          <circular-item src="{{src}}" size="114" />
+          <circular-item src="{{userInfo.avator}}" size="114" />
         </view>
         <view slot="middle" class="base-info-container">
-          <text class="user-name one-row-flow">茯苓170603</text>
+          <text class="user-name one-row-flow">{{userInfo.userName}}</text>
 
           <info-label padding="5rpx 13rpx" size="20" value="{{isVip?'VIP会员':'开通VIP'}}" textColor="#fff" labelColor="{{themeColor}}" catchtap="goToPayment"/>
         </view>
@@ -40,15 +40,15 @@
     <tab-bar class="element-distance" tab-bar-class="theme-padding song-list-nav-container" bindclicktabitem="clickTabItem" currentTabId="{{currentSongListId}}" tabTitles="{{songListNav}}" />
     <!--最近播放过的歌单-->
     <view class="theme-module-margin theme-module-color theme-margin theme-radius module-padding element-distance">
-      <song-list-card music-lists="{{allMusicListInfo[0].list}}" title="{{allMusicListInfo[0].title}}" catchtapitemswitch="tapItemSwitch"  data-index="0" catchtapswitch="tapSwitch"/>
+      <song-list-card music-lists="{{allMusicListInfo[0].list}}" title="{{allMusicListInfo[0].title}}" catchtapitemswitch="tapItemSwitch"  data-index="0" catchtapswitch="tapSwitch" flag="{{2}}"/>
     </view>
     <!--自创歌单-->
     <view class="theme-module-margin theme-module-color theme-margin theme-radius module-padding element-distance">
-      <song-list-card show-add-button music-lists="{{allMusicListInfo[1].list}}" title="{{allMusicListInfo[1].title}}" catchtapadd="tapAdd" catchtapitemswitch="tapItemSwitch"  data-index="1" catchtapswitch="tapSwitch"/>
+      <song-list-card flag="{{1}}" show-add-button music-lists="{{allMusicListInfo[1].list}}" title="{{allMusicListInfo[1].title}}" catchtapadd="tapAdd" catchtapitemswitch="tapItemSwitch"  data-index="1" catchtapswitch="tapSwitch"/>
     </view>
     <!--收藏歌单-->
     <view class="theme-module-margin theme-module-color theme-margin theme-radius module-padding element-distance">
-      <song-list-card music-lists="{{collectionMusicList}}" title="{{allMusicListInfo[2].title}}" catchtapitemswitch="allMusicListInfo[2].list" data-index="2" catchtapswitch="tapSwitch"/>
+      <song-list-card flag="{{3}}" music-lists="{{allMusicListInfo[2].list}}" title="{{allMusicListInfo[2].title}}" catchtapitemswitch="tapItemSwitch" data-index="2" catchtapswitch="tapSwitch"/>
     </view>
   </scroll-view>
 </wrapper>
