--- a/pages/sub-pages/components/batch-music-list-item/batch-music-list-item.wxml
+++ b/pages/sub-pages/components/batch-music-list-item/batch-music-list-item.wxml
@@ -2,7 +2,7 @@
   <three-column-bar>
     <my-radio bindchange="handleCheckChange" size="{{thumbSize/8}}" slot="left" checked="{{checked}}" innerHandle="{{false}}" />
     <view slot="middle" class="music-list-info">
-      <song-list-item src-url="{{cover}}" top-title="{{title}}" bottom-title="{{count}}" item-id="{{item.id}}" />
+      <song-list-item src-url="{{cover}}" top-title="{{title}}" bottom-title="{{count}}" item-id="{{itemId}}" flag="{{flag}}"/>
     </view>
     <view slot="right" class="right-part">
       <i-icon type="packup" size="20" color="{{themeColor}}" class="sort-up" catchtap="tapUp"/>
