--- a/common/components/song-list-action-card/song-list-action-card.wxml
+++ b/common/components/song-list-action-card/song-list-action-card.wxml
@@ -1,6 +1,6 @@
 <song-list-action visible="{{showSongListAction}}" wx:if="{{showSongListAction}}" bind:click="collection" actions="{{[{name: '取   消',color:'#fff'},{name: '完   成',color:themeColor}]}}">
   <!--所有歌单展示及操作弹框-->
-  <view class="theme-padding collect-song-list-container" wx:if="{{showModal=='songListModal'}}">
+  <view class="theme-padding collect-song-list-container" hidden="{{showModal!='songListModal'}}">
     <view class="collect-song-list-item">
       <collect-song-list-item top-title="新建歌单" src-url="https://ossweb-img.qq.com/images/lol/web201310/skin/big84000.jpg" bindtapitem="addNewSongList"/>
     </view>
