--- a/pages/sub-pages/batch-music-list/batch-music-list.wxml
+++ b/pages/sub-pages/batch-music-list/batch-music-list.wxml
@@ -8,7 +8,7 @@
 
   <scroll-view scroll-y slot="content" class="theme-module-color theme-padding" style="height:100%">
     <view wx:for="{{musicListDatas}}" wx:key="id" class="music-list-item">
-      <batch-music-list-item item-id="{{item.id}}" title="{{item.title}}" count="{{item.count}}" cover="{{item.cover}}" checked="{{tools.isArrayInclude(checkedIds,item.id)}}" catchhandlecheckchange="handleCheckChange" catchtapup="tapUp" catchtapdown="tapDown"/>
+      <batch-music-list-item item-id="{{item.id}}" title="{{item.title}}" count="{{item.count}}" cover="{{item.cover}}" checked="{{tools.isArrayInclude(checkedIds,item.id)}}" catchhandlecheckchange="handleCheckChange" catchtapup="tapUp" catchtapdown="tapDown" flag="{{indexs[id]}}"/>
     </view>
     <view wx:if="{{musicListDatas.length==0}}" class="no-content">还没有任何内容</view>
   </scroll-view>
