--- a/pages/components/circular-card-item/circular-card-item.wxml
+++ b/pages/components/circular-card-item/circular-card-item.wxml
@@ -1,4 +1,4 @@
-<view class="circular-card-container" style="width:{{size}}rpx">
+<view class="circular-card-container" style="width:{{size}}rpx" bindtap="tapItem">
   <circular-item src="{{cover}}" size="{{size}}" circular-item-class="cover-item"/>
   <text class="message">{{message}}</text>
 </view>
