--- a/pages/components/personal-recommend-item/personal-recommend-item.wxml
+++ b/pages/components/personal-recommend-item/personal-recommend-item.wxml
@@ -1,4 +1,4 @@
-<view class="square-card-container" style="width:{{size}}rpx">
+<view class="square-card-container" style="width:{{size}}rpx" bindtap="tapItem">
   <view class="out-shadow-container" style="height:size+12rpx;">
     <square-item size="{{size}}" src="{{thumb}}" square-item-class="cover-item"/>
   </view>
